// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MicroCMSPicture アートディレクションの動作 1`] = `
Array [
  <source
    data-testid="source"
    height="1200"
    media="(min-width: 1024px)"
    srcset="https://remote-image/image_lg.png?fit=max&w=640&q=75&fm=avif 640w, https://remote-image/image_lg.png?fit=max&w=1200&q=75&fm=avif 1200w"
    type="image/avif"
    width="1920"
  />,
  <source
    data-testid="source"
    height="1200"
    media="(min-width: 1024px)"
    srcset="https://remote-image/image_lg.png?fit=max&w=640&q=75&fm=webp 640w, https://remote-image/image_lg.png?fit=max&w=1200&q=75&fm=webp 1200w"
    type="image/webp"
    width="1920"
  />,
  <source
    data-testid="source"
    height="1200"
    media="(min-width: 1024px)"
    srcset="https://remote-image/image_lg.png?fit=max&w=640&q=75 640w, https://remote-image/image_lg.png?fit=max&w=1200&q=75 1200w"
    width="1920"
  />,
  <source
    data-testid="source"
    height="800"
    media="(min-width: 768px)"
    srcset="https://remote-image/image_md.png?fit=max&w=640&q=75&fm=avif 640w, https://remote-image/image_md.png?fit=max&w=1200&q=75&fm=avif 1200w"
    type="image/avif"
    width="1920"
  />,
  <source
    data-testid="source"
    height="800"
    media="(min-width: 768px)"
    srcset="https://remote-image/image_md.png?fit=max&w=640&q=75&fm=webp 640w, https://remote-image/image_md.png?fit=max&w=1200&q=75&fm=webp 1200w"
    type="image/webp"
    width="1920"
  />,
  <source
    data-testid="source"
    height="800"
    media="(min-width: 768px)"
    srcset="https://remote-image/image_md.png?fit=max&w=640&q=75 640w, https://remote-image/image_md.png?fit=max&w=1200&q=75 1200w"
    width="1920"
  />,
  <source
    data-testid="source"
    srcset="https://remote-image/image.png?fit=max&w=640&q=75&fm=avif 640w, https://remote-image/image.png?fit=max&w=1200&q=75&fm=avif 1200w"
    type="image/avif"
  />,
  <source
    data-testid="source"
    srcset="https://remote-image/image.png?fit=max&w=640&q=75&fm=webp 640w, https://remote-image/image.png?fit=max&w=1200&q=75&fm=webp 1200w"
    type="image/webp"
  />,
]
`;

exports[`MicroCMSPicture デフォルトの動作 1`] = `
Array [
  <source
    data-testid="source"
    srcset="https://remote-image/image.png?fit=max&w=640&q=75&fm=avif 640w, https://remote-image/image.png?fit=max&w=1200&q=75&fm=avif 1200w"
    type="image/avif"
  />,
  <source
    data-testid="source"
    srcset="https://remote-image/image.png?fit=max&w=640&q=75&fm=webp 640w, https://remote-image/image.png?fit=max&w=1200&q=75&fm=webp 1200w"
    type="image/webp"
  />,
]
`;
